# stroem

./: .dockerignore  .gitignore  CLAUDE.md  CONCEPTS.md  Cargo.toml  Dockerfile.server  Dockerfile.worker  README.md  TODO.md  archive.sh  dashboard-debug-analysis.md  docker-compose.yml  run.sh  run_server.sh  ui.md  zellij_layout.kdl
.github/: dependabot.yml
.github/workflows/: docker-build.yml
.kiro/specs/dashboard-data-format-fix/: design.md  requirements.md  tasks.md
.kiro/specs/dashboard-metrics-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/enhanced-task-management-ui/: design.md  requirements.md  tasks.md
.kiro/specs/flowbite-to-custom-ui-migration/: design.md  requirements.md  tasks.md
.kiro/specs/react-ui-implementation/: design.md  requirements.md  tasks.md
.kiro/specs/ui-redesign/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: action.rs  dag_walker.rs  lib.rs  log_collector.rs  parameter_renderer.rs  runner.rs  workflows_configuration.rs  workspace.rs  workspace_client.rs  workspace_configuration.rs  workspace_server.rs
common/src/action/: shell.rs
docs/: UI_REIMPLEMENTATION_GUIDE.md
files/: config.yaml  server-config.yaml
files/workspace/.workflows/: config.yaml  config2.yaml
files/workspace/.workflows/test/: config3.yaml
runner/: Cargo.toml
runner/src/: main.rs
server/: Cargo.toml  build.rs
server/migrations/: 01_initial_schema.sql  02_authentication_basic.sql
server/src/: api.rs  auth.rs  error.rs  main.rs  queue.rs  repository.rs  scheduler.rs  server_config.rs  web.rs  workspace.rs  workspace_folder.rs  workspace_git.rs  workspace_server.rs  workspace_source.rs
server/src/auth/: internal.rs  oidc.rs
server/src/repository/: job.rs  log.rs
server/src/repository/log/: aws_s3.rs  local.rs
server/src/web/: api.rs  api_response.rs  auth.rs  worker.rs
server/src/workspace_source/: folder.rs  git.rs
ui/: .env  FOUNDATION_SETUP.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui-legacy/: vitest.config.ts
ui-legacy/src/lib/: index.ts  types.ts
ui-legacy/src/lib/api/: dashboard.ts
ui-legacy/src/lib/components/: layout.integration.test.ts
ui-legacy/src/lib/components/atoms/: Alert.svelte  Button.test.ts  Card.svelte  FormField.test.ts  Input.test.ts  Label.svelte  Select.test.ts  Table.svelte  Table.test.ts  Tabs.svelte  TaskConfigurationSkeleton.svelte
ui-legacy/src/lib/components/examples/: RecentActivityWidgetExample.svelte  layout-example.md
ui-legacy/src/lib/components/icons/: ActionsIcon.svelte  ChevronDownIcon.svelte  ChevronRightIcon.svelte  ClockIcon.svelte  CloseCircleIcon.svelte  DashboardIcon.svelte  ExclamationCircleIcon.svelte  FilterIcon.svelte  HomeIcon.svelte  InformationCircleIcon.svelte  JobsIcon.svelte  LogoutIcon.svelte  TasksIcon.svelte  TrendingUpIcon.svelte  UserIcon.svelte
ui-legacy/src/lib/components/molecules/: ActivityFeed.svelte  Breadcrumb.svelte  JobExecutionMetricsWidget.svelte  JobExecutionMetricsWidget.test.ts  JobExecutionTrendsWidget.svelte  LineChart.svelte  LineChart.test.ts  RecentActivityWidget.svelte  SystemStatusWidget.svelte  SystemStatusWidget.test.ts  TaskCard.svelte  TaskConfiguration.svelte  TaskHeader.svelte  TaskStatistics.svelte  dashboard-components.test.ts
ui-legacy/src/lib/components/organisms/: Navbar.svelte  Sidebar.svelte
ui-legacy/src/lib/utils/: index.ts
ui-legacy/src/routes/: +layout.svelte  +page.svelte
ui-legacy/src/routes/jobs/[jobId]/: +page.svelte  +page.ts
ui-legacy/src/routes/login/: +page.ts
ui-legacy/src/routes/tasks/: +page.svelte  +page.ts
ui-legacy/src/routes/tasks/[taskId]/: +page.svelte
ui/src/: App.tsx  app.css  index.css  test-setup.ts
ui/src/components/auth/: LoginForm.tsx  OIDCCallback.tsx  ProtectedRoute.tsx  index.ts
ui/src/components/debug/: ApiDebugger.tsx
ui/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
ui/src/components/tasks/: TaskCard.tsx  TaskDetail.tsx  TaskFilters.tsx  index.ts
ui/src/components/tasks/__examples__/: TaskDetail.example.tsx
ui/src/components/tasks/__tests__/: TaskDetail.test.tsx
ui/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Chart.tsx  ComponentDemo.tsx  Input.tsx  Loading.tsx  Modal.tsx  Pagination.tsx  Table.tsx  Tooltip.tsx  index.ts
ui/src/components/widgets/: JobMetricsWidget.tsx  JobTrendsWidget.tsx  RecentActivityWidget.tsx  SystemStatusWidget.demo.tsx  SystemStatusWidget.md  SystemStatusWidget.tsx  index.ts
ui/src/components/widgets/__examples__/: JobMetricsWidgetUsage.tsx  JobTrendsWidget.example.tsx  RecentActivityWidget.example.tsx
ui/src/components/widgets/__tests__/: JobMetricsWidget.simple.test.tsx  JobTrendsWidget.simple.test.tsx  JobTrendsWidget.test.tsx  RecentActivityWidget.simple.test.tsx  RecentActivityWidget.test.tsx  (+2 more)
ui/src/contexts/: AuthContext.tsx
ui/src/hooks/: useAuth.ts
ui/src/lib/: auth.ts  index.ts  stores.ts  types.ts
ui/src/lib/api/: dashboard.ts
ui/src/lib/components/: README.md  index.ts  integration.test.ts
ui/src/lib/types/: index.ts
ui/src/lib/utils/: index.ts  layout.test.ts  layout.ts  validation.test.ts  validation.ts
ui/src/pages/: DashboardPage.tsx  JobsPage.tsx  LoginPage.tsx  TaskDetailPage.tsx  TasksPage.tsx  index.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/debug-tasks/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/tasks/: +page.svelte  +page.ts  README.md  url-state.test.ts
ui/src/services/: apiClient.ts  apiTypes.ts  authService.ts  dashboardService.ts  index.ts  jobService.ts  taskService.ts
ui/src/services/__examples__/: dashboardServiceUsage.ts  taskServiceUsage.ts
ui/src/services/__tests__/: dashboardService.test.ts  taskService.test.ts
ui/src/types/: api-examples.md  index.ts
ui/src/utils/: index.ts  tokenStorage.ts
worker/: Cargo.toml
worker/src/: main.rs  runner_local.rs
(+72 files in other folders)
