[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["common", "server", "worker", "runner", "cli"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-cookie = "0.2.3"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tar = "0.4.44"
flate2 = { version = "1.1.2" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
config = "0.15.13"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
clap = { version = "4.5.41", features = ["derive"] }
globwalker = "0.9.0"
anyhow = "1.0.98"
tera = "1.20.0"
cron = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
# chrono-tz = "0.10.3"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
notify = "8.0.0"
blake2 = "0.10.6"
fs2 = "0.4.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid"] }
sqlx-paginated = { version = "0.2.32", features = ["postgres"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["io-util", "sync"] }
regex = "1.11.1"
lazy_static = "1.5.0"
upon = "0.9.0"
git2 = "0.20.2"
async-trait = "0.1.88"
rust-embed = "8.7.2"
mime_guess = "2.0.5"
futures-util = "0.3.31"
strum = { version = "0.27.2", features = ["derive"] }
# object_store = "0.12.0"
async-compression = { version = "0.4.27", features = ["tokio", "gzip"] }
async-tar = "0.5.0"
tokio-util = { version = "0.7.15", features = ["compat"]  }
tokio-tar = "0.3.1"
aws-sdk-s3 = "1.85.0"
aws-config = "1.8.1"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
sha3 = "0.10.8"
hmac = "0.12.1"
duration-str = "0.17.0"
# time = {version = "0.3.41", features = ["serde", "serde-human-readable"]}
openid = { version = "0.17.0", default-features = false, features = ["rustls"]}