[package]
name = "stroem-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stroem"
path = "src/main.rs"

[dependencies]
stroem-common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tera = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
