# common/Cargo.toml
[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4.44"
flate2 = "1.1.0"
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
config = { workspace = true }
uuid = { version = "1.15.0", features = ["v4"] }
clap = { version = "4.5.31", features = ["derive"] }
globwalker = { workspace = true }
anyhow = { workspace = true }
tera = { workspace = true }
cron = "0.15.0"
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { workspace = true }
blake2 = { workspace = true }