# common/Cargo.toml
[package]
name = "stroem-common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4.44"
flate2 = "1.1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
globwalker = { workspace = true }
anyhow = { workspace = true }
tera = { workspace = true }
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { workspace = true }
blake2 = { workspace = true }
fs2 = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
upon = { workspace = true }
notify = {workspace = true}