# common/Cargo.toml
[package]
name = "stroem-common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
globwalker = { workspace = true }
anyhow = { workspace = true }
tera = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
blake2 = { workspace = true }
fs2 = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
upon = { workspace = true }
notify = {workspace = true}
async-trait = { workspace = true }
strum = { workspace = true}