[package]
name = "stroem-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
stroem-common = { path = "../common" }
axum = { version = "0.8.1", features = ["macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = "0.15.8"
uuid = { version = "1.15.0", features = ["v4"] }
clap = { workspace = true }
globwalker = "0.9.0"
anyhow = "1.0.96"
tera = { workspace = true }
cron = "0.15.0"
chrono = "0.4.40"
reqwest = { workspace = true }
tempdir = "0.3.7"
fs2 = { workspace = true }