[package]
name = "stroem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
stroem-common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = "0.15.8"
uuid = { version = "1.15.0", features = ["v4"] }
clap = { workspace = true }
globwalker = { workspace = true }
anyhow = "1.0.96"
tera = "1.20.0"
cron = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
refinery = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
fs2 = {workspace = true}
futures = {workspace = true}
tokio-stream = {workspace = true}

[build-dependencies]
refinery = { workspace = true }
