[package]
name = "stroem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
stroem-common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
globwalker = { workspace = true }
anyhow = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
refinery = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
fs2 = {workspace = true}
futures = {workspace = true}
tokio-stream = {workspace = true}
notify = {workspace = true}
blake2 = { workspace = true }
git2 = {workspace = true}
rust-embed = { workspace = true }
mime_guess = { workspace = true }
sqlx = {workspace = true}
sqlx-paginated = { workspace = true }
futures-util = { workspace = true }
strum = { workspace = true}
strum_macros = { workspace = true }
async-trait = { workspace = true}
async-compression = { workspace = true }
async-tar = { workspace = true }
tokio-util = { workspace = true}
tokio-tar = {workspace = true}
aws-sdk-s3 = {workspace = true}
aws-config = {workspace = true}

[build-dependencies]
refinery = { workspace = true }
