[package]
name = "stroem-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
stroem-common = { path = "../common" }
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.142"
tar = "0.4.44"
flate2 = "1.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
config = "0.15.15"
uuid = { version = "1.18.1", features = ["v4"] }
clap = { version = "4.5.47", features = ["derive"] }
globwalker = "0.9.0"
anyhow = "1.0.99"
tera = "1.20.0"
cron = "0.15.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4.41", features = ["serde"] }